Fix new answer form alignment

--- a/app/assets/stylesheets/answers.css.scss
+++ b/app/assets/stylesheets/answers.css.scss
@@ -6,6 +6,10 @@
   text-align: center;
 }
 
+.new-answer-form {
+  margin-top: 40px;
+}
+
 // collection
 
 .answer-metric {
